feature: prepare plugin

--- a/features/gutenberg/components/YoutubeBlockPreview.scss
+++ b/features/gutenberg/components/YoutubeBlockPreview.scss
@@ -41,7 +41,6 @@
 
   &--form{
     position: absolute;
-    display: flex;
 
 
     top:0;
@@ -79,6 +78,7 @@
 
       >input{
         flex: 100;
+        min-width: 0;
       }
     }
   }
